# Learning_from_building_systems

./: README.md  index.html
ProofOfConcept/: index.html
control/: controller_sim.html  index.html
documentation/: index.html
electrical/: index.html  selecting_hardware.html
electronics/: index.html
finance/: index.html
language/: index.html
language/english/: index.html
management/: article_time_estimation.html  effort_estimation.html  index.html
mechanical/: index.html
optimization/: 00-learning-plan.html  01-foundations.html  02-unconstrained-optimization.html  03-least-squares.html  04-constrained-optimization.html  05-convex-optimization.html  06-graph-optimization.html  07-numerical-methods.html  08-matrix-essentials.html  09-lie-groups.html  10-game-theory.html  curriculum.html  index.html
people/: index.html
production/: index.html
quality/: index.html
robotics/: index.html
robotics/learn/cpp-advanced/01-move-semantics-value-categories/exercises/: CMakeLists.txt  ex01_value_categories.cpp  ex02_rule_of_five.cpp  ex03_perfect_forwarding.cpp  ex04_constexpr_crc32.cpp  ex05_concepts.cpp  ex06_message_descriptor.cpp
robotics/learn/cpp-advanced/02-error-handling-memory-model/exercises/: CMakeLists.txt  ex01  ex01_exception_cost.cpp  ex02  ex02_expected.cpp  ex03  ex03_variant_state_machine.cpp  ex04  ex04_memory_model.cpp  ex05  ex05_acquire_release.cpp  ex06  ex06_compare_exchange.cpp  ex07  ex07_spsc_queue.cpp
robotics/learn/cpp-advanced/03-rt-linux-programming/exercises/: CMakeLists.txt  ex01_rt_forbidden.cpp  ex02_thread_affinity.cpp  ex03_cyclic_executive.cpp  ex04_pool_allocator.cpp  ex05_rt_cyclic_with_telemetry.cpp
robotics/learn/cpp-advanced/04-safety-critical-patterns/exercises/: CMakeLists.txt  ex01_jpl_rules.cpp  ex02_defensive_programming.cpp  ex03_static_analysis.cpp  ex04_watchdog.cpp  ex05_watchdog_health_project.cpp
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/: CMakeLists.txt  ex02_gtest_suite.cpp  ex03_fuzzer_harness.cpp  ex04_profiling_guide.cpp
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/ex01_cmake_project/: CMakeLists.txt  CMakePresets.json
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/ex01_cmake_project/cmake/: rt_core-config.cmake.in
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/ex01_cmake_project/include/rt_core/: cyclic_executive.hpp  spsc_queue.hpp
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/ex01_cmake_project/src/: cyclic_executive.cpp
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/ex01_cmake_project/tests/: test_cyclic_executive.cpp  test_spsc_queue.cpp
robotics/learn/cpp-advanced/05-build-test-tooling/exercises/ex05_ci_project/: Makefile  README.md  run_all_checks.sh
robotics/learn/cpp-advanced/06-ipc-serialization/exercises/: CMakeLists.txt  ex01_shared_memory.cpp  ex02_serialization_bench.cpp  ex03_type_erasure.cpp  ex04_plugin_loader.cpp  ex05_telemetry_pipeline.cpp
robotics/learn/cpp-advanced/07-ub-advanced-patterns/exercises/: CMakeLists.txt  ex01_ub_catalog.cpp  ex02_crtp.cpp  ex03_policy_design.cpp  ex04_structured_logging.cpp  ex05_ub_detector_challenge.cpp
robotics/learn/cpp-advanced/08-capstone-flight-software/: CMakeLists.txt  README.md  index.html
robotics/learn/cpp-advanced/08-capstone-flight-software/include/flight_sw/: cyclic_executive.hpp  health_monitor.hpp  mode_manager.hpp  pid_controller.hpp  sensor_sim.hpp  spsc_queue.hpp  trace_buffer.hpp  watchdog.hpp
robotics/learn/cpp-advanced/08-capstone-flight-software/src/: main.cpp
robotics/learn/cpp-advanced/08-capstone-flight-software/tests/: test_main.cpp
robotics/learn/cpp-advanced/09-hardware-lessons/exercises/: CMakeLists.txt  hw01_clock_drift.cpp  hw02_gpio_signals.cpp  hw03_dma_cache.cpp  hw04_scheduler.cpp  hw05_memory_hierarchy.cpp
robotics/learn/cpp-advanced/10-safety-lessons/exercises/: CMakeLists.txt  sf01_mcdc_coverage.cpp  sf02_misra_compliance.cpp  sf03_fault_tolerance.cpp  sf04_formal_lite.cpp  sf05_incident_analysis.cpp
robotics/learn/cpp-advanced/11-cpp20-coroutines/exercises/: CMakeLists.txt  ex01_generator.cpp  ex02_async_task.cpp  ex03_coroutine_scheduler.cpp  ex04_symmetric_transfer.cpp
robotics/learn/cpp-advanced/12-cpp20-ranges/exercises/: CMakeLists.txt  ex01_range_basics.cpp  ex02_projections.cpp  ex03_custom_view.cpp  ex04_range_algorithms.cpp  ex05_lazy_pipeline.cpp
robotics/learn/cpp-advanced/13-cpp20-format/exercises/: CMakeLists.txt  ex01_format_basics.cpp  ex02_custom_formatter.cpp  ex03_format_benchmark.cpp  ex04_safe_logging.cpp
robotics/learn/cpp-advanced/14-exception-safety/exercises/: CMakeLists.txt  ex01_guarantee_levels.cpp  ex02_copy_and_swap.cpp  ex03_scope_guard.cpp  ex04_noexcept_impact.cpp  ex05_exception_safe_container.cpp
robotics/learn/cpp-advanced/15-pmr-allocators/exercises/: CMakeLists.txt  ex01_monotonic_buffer.cpp  ex02_pool_resource.cpp  ex03_custom_memory_resource.cpp  ex04_realtime_arena.cpp  ex05_pmr_containers.cpp
robotics/learn/cpp-advanced/16-sanitizer-workshop/exercises/: CMakeLists.txt  ex01_asan_bugs.cpp  ex02_ubsan_bugs.cpp  ex03_tsan_bugs.cpp  ex04_sanitizer_ci.cpp  ex05_sanitizer_detective.cpp
robotics/learn/cpp-advanced/17-sdv-mission-critical/exercises/: CMakeLists.txt  ex01_e2e_protection.cpp  ex02_degradation_fsm.cpp  ex03_cyclic_executor.cpp  ex04_triple_buffer.cpp  ex05_dtc_manager.cpp  ex06_ota_state_machine.cpp  ex07_secoc_authenticator.cpp  ex08_service_health_monitor.cpp
robotics/learn/cpp-advanced/18-coding-standards-tracing/exercises/: CMakeLists.txt  ex01_coding_standards.cpp  ex02_static_analysis_traps.cpp  ex03_cache_profiling.cpp  ex04_callgraph_hotspot.cpp  ex05_syscall_reduction.cpp  ex06_tracepoint_framework.cpp  ex07_watchpoint_corruption.cpp  ex08_flamegraph_optimization.cpp
site/: 404.html  index.html  sitemap.xml
site/arts/: index.html
software/: index.html  webdev_browser_execution.html
systems/: diagnostics.html  index.html  requirements.html
testing/: README.md  index.html  test_build_robotics.py
tools/: build_robotics.py
(+802 files in other folders)
